--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -11,12 +11,15 @@
 
         {{#each shopCart}}
         <li>
-          <div class="col-xs-7"  align="left"> {{Name}}</div>
+          <div class="col-xs-12"  align="left"> {{Name}}</div>
          <!-- <div><input  class="col-xs-1 text-warning prodqty_{{product}}" size="2" maxlength="2" value={{qty}}/></div>-->
 
-          <div><input type="number" maxlength="2" class="text-warning product_{{product}}" size="2" min="1" max="10" id="product_{{product}}" name="product_{{product}}" value="{{qty}}"></div>
+          <div class="col-xs-12">
 
-          <div class="col-xs-2"> <span class="amount pull-right" >{{currency price}} </span></div>
+            <input type="number" maxlength="2" class="text-warning product_{{product}}" size="2" min="1" max="10" id="product_{{product}}" name="product_{{product}}" value="{{qty}}">
+
+           <span class="amount pull-right" >{{currency price}} </span>
+        </div>
         </li>  
         <br><hr style=" border-top: 1px dotted grey;" width="90%">
         {{else}}
@@ -38,10 +41,10 @@
         <div class="minicart-total"> Your Contact Information:<br>
           <br>
           <p>
-              <input class="text-warning" id="contactName" name="contactName" placeholder="Name" required><sub>*</sub>
+              <input class="text-warning" id="contactName" name="contactName" placeholder="Name" required>&nbsp;<sub>*</sub>
               <br>
               <br>
-              <input type="email" class="text-warning" id="inputEmail" name="email" placeholder="Email" required><sub>*</sub>
+              <input type="email" class="text-warning" id="inputEmail" name="email" placeholder="Email" required>&nbsp;<sub>*</sub>
               <br>
               <br>
               <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone Number">
