--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -88,7 +88,7 @@
               <table cellspacing="0" cellpadding="0" width="100%"  style="border-collapse:separate !important;">
                 <tr>
                   <td class="mini-block">
-                  <span class="header-sm highlight">Your Number Number is [ {{orderNumber UniqueId}} ]</span>
+                  <span class="header-sm highlight">Your Order #[ {{orderNumber UniqueId}} ]</span>
                   <br />  <br /> 
                     <table cellpadding="0" cellspacing="0" width="100%" align="center">
                       <tr>
@@ -126,7 +126,7 @@
                                      <!-- STEP THREE -->
                                     <td class="step">
                                       <img src="/img/3-off.png" alt="Not Ready" /><br />
-                                <b>&nbsp;</b><br />Not Ready</td>
+                                <b>&nbsp;</b><br />Ready for Pickup</td>
 
                                 {{/if}}
 
