--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -17,7 +17,7 @@
                 <table cellpadding="0" cellspacing="0" width="100%" class="w320">
                   <tr>
                     <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;">
-                      <img height="30" src="https://dosahouseau.herokuapp.com/img/dosa-logo2.png" alt="Dosa Express Logo" />
+                     <a href="/"> <img height="30" src="https://dosahouseau.herokuapp.com/img/dosa-logo2.png" alt="Dosa Express Logo" /></a>
                       
                     </td>
                     <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d;">
@@ -59,7 +59,7 @@
 
                 {{#if isDelivered UniqueId}}
 
-                Your Order delivered !
+                Your Order has been delivered !
 
                 {{else}}
 
@@ -88,7 +88,7 @@
               <table cellspacing="0" cellpadding="0" width="100%"  style="border-collapse:separate !important;">
                 <tr>
                   <td class="mini-block">
-                  <span class="header-sm highlight">Your Order #[ {{orderNumber UniqueId}} ]</span>
+                  <span class="header-sm highlight">Your Order # [ {{orderNumber UniqueId}} ]</span>
                   <br />  <br /> 
                     <table cellpadding="0" cellspacing="0" width="100%" align="center">
                       <tr>
