--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -58,9 +58,19 @@
                       {{#if isItemAvailable fontLine}}  
 
                             <div class="prices"> 
-                                <button type="button" class="fa fa-shopping-cart  btn btn-default addcart" data-toggle="tooltip" data-placement="bottom" title="Add to Order">
-                                  <span class="price xsm"> {{currency Charge}} </span>  
-                                </button>
+
+                                {{#if isItemInCart UniqueId }}
+
+                                      <button type="button" class="fa fa-check btn btn-success" data-toggle="tooltip" data-placement="bottom" title='Added'>
+                                          <span class="price xsm"> {{currency Charge}} </span>  
+                                      </button>
+
+                                {{else}}
+                                      <button type="button" class="fa fa-shopping-cart  btn btn-default addcart" data-toggle="tooltip" data-placement="bottom" title="Add to Order">
+
+                                        <span class="price xsm"> {{currency Charge}} </span>  
+                                      </button>
+                                  {{/if}}
                             </div>
                       {{else}}
 
