Center conf page

--- a/client/views/template/header.html
+++ b/client/views/template/header.html
@@ -1,7 +1,7 @@
 <template name="header">
 
 <header class="shadow" >
-  <div id="logo"><a href="/"><img  src="img/dosa-logo2.png" width="100" alt="Homepage" ></a></div>
+  <div id="logo"><a href="#"><img  src="img/dosa-logo2.png" width="100" alt="Homepage" ></a></div>
   <div id="cd-hamburger-menu"><a class="cd-img-replace hamburgerMenu" href="#0">Menu</a></div>
   <div id="cd-cart-trigger"><a class="cd-img-replace openCart" href="#0">Cart</a></div>
 
