--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -93,7 +93,7 @@
                     <table cellpadding="0" cellspacing="0" width="100%" align="center">
                       <tr>
                         <td class="progress-bar" align="center">
-                          <table cellpadding="0" align="center" cellspacing="0" width="300">
+                          <table cellpadding="0" align="center" cellspacing="0" width="100%">
                             <tr>
 
                               <!-- STEP ONE -->
