Toggle Add to cart button

--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -61,12 +61,12 @@
 
                                 {{#if isItemInCart UniqueId }}
 
-                                      <button type="button" class="fa fa-check btn btn-success " data-toggle="tooltip" data-placement="bottom" title='Added'>
+                                      <button type="button" class="fa fa-check btn btn-success removecart " data-toggle="tooltip" data-placement="bottom" title='Remove from Cart'>
                                           <span class="price xsm"> {{currency Charge}} </span>  
                                       </button>
 
                                 {{else}}
-                                      <button type="button" class="fa fa-shopping-cart  btn btn-default addcart" data-toggle="tooltip" data-placement="bottom" title="Add to Order">
+                                      <button type="button" class="fa fa-shopping-cart  btn btn-default addcart" data-toggle="tooltip" data-placement="bottom" title="Add to Cart">
 
                                         <span class="price xsm"> {{currency Charge}} </span>  
                                       </button>
