Get tax percentage from websheet

--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -34,7 +34,7 @@
     {{#if shopCart.itemCount }}
 
 
-      <div class="minicart-total" style="background-color:lightyellow;">Total (Including Tax) <span class="amount pull-right" >{{currency shopCart.total}}</span> </div>
+      <div class="minicart-total" style="background-color:lightyellow;">Total ({{shopCart.taxMessage}}) <span class="amount pull-right" >{{currency shopCart.total}}</span> </div>
 
       
 
