--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -238,16 +238,36 @@
 
 
                   <tr>
-                    <td class="item-col item">
-                    </td>
-                    <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;"><span class="total-space">Subtotal</span> <br />
-                      <span class="total-space">Tax</span> <br />
-                      <!-- <span class="total-space">Delivery Fee</span> <br /> -->
-                    <span class="total-space" style="font-weight: bold; color: #4d4d4d">Total</span></td>
-                    <td class="item-col price" style="text-align: left; border-top: 1px solid #cccccc;"><span class="total-space">{{getSubTotal}}</span> <br />
-                      <span class="total-space">{{getTax}}</span> <br />
-                      <!--<span class="total-space">$0.00</span> <br /> -->
-                    <span class="total-space" style="font-weight:bold; color: #4d4d4d">{{getTotal}}</span></td>
+                     {{# if haveTax}}
+                                <td class="item-col item">
+                                </td>
+                                <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;"><span class="total-space">Subtotal</span> <br />
+                                  <span class="total-space">Tax</span> <br />
+                                  <!-- <span class="total-space">Delivery Fee</span> <br /> -->
+                                <span class="total-space" style="font-weight: bold; color: #4d4d4d">Total</span></td>
+                                <td class="item-col price" style="text-align: left; border-top: 1px solid #cccccc;"><span class="total-space">{{getSubTotal}}</span> <br />
+                                 
+                                    <span class="total-space">{{getTax}}</span> <br />
+                                  
+                                  <!--<span class="total-space">$0.00</span> <br /> -->
+                                <span class="total-space" style="font-weight:bold; color: #4d4d4d">{{getTotal}}</span>
+
+                            </td>
+
+                       {{else}}     
+                                <td class="item-col item">
+                                </td>
+                                <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;">
+                                  <!-- <span class="total-space">Delivery Fee</span> <br /> -->
+                                <span class="total-space" style="font-weight: bold; color: #4d4d4d">Total</span></td>
+                                <td class="item-col price" style="text-align: left; border-top: 1px solid #cccccc;">
+                                  
+                                  <!--<span class="total-space">$0.00</span> <br /> -->
+                                <span class="total-space" style="font-weight:bold; color: #4d4d4d">{{getTotal}}</span>
+
+                            </td>                       
+
+                      {{/if}}      
                   </tr>  
                 </table>
               </td>
