Notification and Conf page

--- a/client/views/template/footerConfirmation.html
+++ b/client/views/template/footerConfirmation.html
@@ -2,11 +2,9 @@
 
   <footer id="footer" class="footer">
       <div class="row"   id="address" style="padding:50px;"> 
-        <div class="pull-left col-xs-6" align="left"> {{address.Value}}
-          Phone: <a href="tel:{{phoneNumber.Value}}" class="phone">{{phoneNumber.Value}}</a> 
-            <br>
+        <div class="pull-left col-xs-6" align="left"> 
           Fax: <a href="tel:{{faxNumber.Value}}" class="phone">{{faxNumber.Value}}</a> 
-          <br>
+          
 
         </div>
         <div class="pull-right col-xs-6" align="right">
