--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -2,6 +2,7 @@
 
 
 
+
 <!-- NAVIGATIONS END --> 
 <!-- Main Page START -->
 <main id="main">
@@ -17,7 +18,24 @@
     <!--/container--> 
     
   </div>
+</main>
 
+{{# if haveNotification notification}}
+
+          <!-- Notification Alerts -->
+<div class="alert alert-info alert-dismissible text-center" style="box-shadow: 2px 2px 2px rgba(1, 1, 0, 0.2);" role="alert">
+  <button type="button" class=" fa fa-close close" data-dismiss="alert" aria-label="Close"></button>
+
+{{#each notification}}
+
+  <h5>  <i class="fa  fa-flag"> &nbsp;</i>  {{this}}</h5>
+
+  {{/each}}
+</div>
+
+
+          <!-- End Notification Alerts -->
+{{/if}}
 <!-- Main Content --> 
 <!-- Main > Start Menus-->
 <div class="col-xs-12" id="menu">
@@ -119,7 +137,7 @@
 
 
 
-</main>
+
 
 
 
