--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -48,6 +48,9 @@
               <br>
               <br>
               <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone Number">
+              <br>
+              <br>
+              <input  type="textarea" maxlength="50" class="text-warning" id="intputPhoneNumber"  rows="2" name="messageToKitchen"  wrap="hard" placeholder="Message To Kitchen">
             </p>
         </div>
         <br>
