--- a/client/views/template/header.html
+++ b/client/views/template/header.html
@@ -3,17 +3,18 @@
 <header class="shadow" >
   <div id="logo"><a href="#"><img  src="img/dosa-logo2.png" width="100" alt="Homepage" ></a></div>
   <div id="cd-hamburger-menu"><a class="cd-img-replace hamburgerMenu" href="#0">Menu</a></div>
-  <div id="cd-cart-trigger"><a class="cd-img-replace openCart" href="#0">Cart</a></div>
+  <div id="cd-cart-trigger"><a id ="dosahousecart" class="cd-img-replace openCart" href="#0">Cart</a></div>
 
 
 </header>
 <!-- NAVIGATIONS -->
 <nav id="main-nav">
-  <ul style="font-family: 'Montserrat';">
-    <li class="removeShadowMenu"> <a href="#menu" >Our Menu</a> </li>
-    <li class="removeShadowMenu"> <a href="#aboutUs" >About Us</a> </li>
-    <li class="removeShadowMenu"> <a href="#catering">Catering</a> </li>
-    <li class="removeShadowMenu"> <a href="#findUs">Find Us</a> </li>
+  <ul id="main-nav-header" style="font-family: 'Montserrat';">
+    <li> <a id="main-menutoggle" 		href="#menu" 		class="mainmenutoggle">Our Menu</a> </li>
+    <li> <a id="aboutus-menutoggle" href="#aboutUs" class="mainmenutoggle">About Us</a></li>
+    <li > <a id="catering-menutoggle" 	href="#catering" 	class="mainmenutoggle">Catering</a> </li>
+    <li> <a id="findus-menutoggle" href="#findUs" class="mainmenutoggle">Find Us</a></li>
+
   </ul>
 </nav>
 
