--- a/client/stylesheets/plaindosa-style.css
+++ b/client/stylesheets/plaindosa-style.css
@@ -116,13 +116,10 @@ header {
 	right: 0;
 }
 #cd-cart-trigger a {
-	background: #26292f url("../img/sidecart/cd-cart.svg") no-repeat center center;
+	background: url("../img/sidecart/cd-cart.svg") no-repeat center center;
 }
 
-/* Added Cart */
-#cd-cart-triggered a {
-	background: green url("../img/sidecart/cd-cart.svg") no-repeat center center;
-}
+
 
 @media only screen and (min-width: 1200px) {
 #cd-cart-trigger {
@@ -133,15 +130,8 @@ header {
 	position: relative;
 	width: 100px;
 	border-left: none;
-	background-color: #26292f;
 }
-/* Added Cart */
-#cd-cart-triggered a {
-	position: relative;
-	width: 100px;
-	border-left: none;
-	background-color: green;
-}
+
 
 }
 #main-nav, #cd-cart {
@@ -873,3 +863,15 @@ background:#000
 .xsm a, h6 a {
 	color: inherit;
 }
+
+
+@-ms-keyframes wiggle{0%{-ms-transform:rotate(3deg);}50%{-ms-transform:rotate(-3deg);}100%{-ms-transform:rotate(3deg);}}
+@-moz-keyframes wiggle{0%{-moz-transform:rotate(3deg);}50%{-moz-transform:rotate(-3deg);}100%{-moz-transform:rotate(3deg);}}
+@-webkit-keyframes wiggle{0%{-webkit-transform:rotate(3deg);}50%{-webkit-transform:rotate(-3deg);}100%{-webkit-transform:rotate(3deg);}}
+@keyframes wiggle{0%{transform:rotate(3deg);}50%{transform:rotate(-3deg);}100%{transform: rotate(3deg);}}
+
+a.wiggle-me{-ms-animation:wiggle .3s 2;-moz-animation:wiggle .3s 2;-webkit-animation:wiggle .2s 2;animation:wiggle .3s 2;}
+
+
+
+
