--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -220,7 +220,7 @@
                         </tr>
                       </table>
                     </td>
-                    <td class="item-col quantity">
+                    <td class="item-col quantity" >
                       {{qty}}
                     </td>
                     <td class="item-col" style="text-align: right">
@@ -241,7 +241,8 @@
                      {{# if haveTax}}
                                 <td class="item-col item">
                                 </td>
-                                <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;"><span class="total-space" >Subtotal</span> <br />
+                                <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;">
+                                  <span class="total-space" >Subtotal</span> <br />
                                   <span class="total-space">Tax</span> <br />
                                   <!-- <span class="total-space">Delivery Fee</span> <br /> -->
                                 <span class="total-space" style="font-weight: bold; color: #4d4d4d">Total</span></td>
@@ -260,10 +261,10 @@
                                 <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;">
                                   <!-- <span class="total-space">Delivery Fee</span> <br /> -->
                                 <span class="total-space" style="font-weight: bold; color: #4d4d4d">Total</span></td>
-                                <td class="item-col price" style="text-align: left; border-top: 1px solid #cccccc;">
+                                <td class="item-col price" style="text-align: right; border-top: 1px solid #cccccc;">
                                   
                                   <!--<span class="total-space">$0.00</span> <br /> -->
-                                <span class="total-space" style="font-weight:bold; color: #4d4d4d">{{getTotal}}</span>
+                                <span class="total-space" style="text-align: right; font-weight:bold; color: #4d4d4d">{{getTotal}}</span>
 
                             </td>                       
 
