--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -54,7 +54,7 @@
             </p>
         </div>
         <br>
-        <button type="submit" class="btn btn btn-success checkout-btn placeOrder">Place Order</button>
+        <button type="submit" class="btn btn btn-success checkout-btn placeOrder">Place Order ( To Go Only )</button>
 
 
       {{/if}}
