--- a/client/views/template/header.html
+++ b/client/views/template/header.html
@@ -23,7 +23,7 @@
     <li> <a id="main-menutoggle" 		href="#menu" 		class="mainmenutoggle">Our Menu</a> </li>
     <li> <a id="aboutus-menutoggle" href="#aboutUs" class="mainmenutoggle">About Us</a></li>
     <li > <a id="catering-menutoggle" 	href="#catering" 	class="mainmenutoggle">Catering</a> </li>
-    <li> <a id="findus-menutoggle" href="#findUs" class="mainmenutoggle">Find Us</a></li>
+    <li> <a id="findus-menutoggle" href="https://www.google.com/maps/place/4%2F100-102+Pacific+Hwy,+Waitara+NSW+2077,+Australia"  target="_blank" class="mainmenutoggle">Find Us</a></li>
 
   </ul>
 </nav>
