Fixed the phone Number

--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -50,7 +50,7 @@
               <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone Number">
               <br>
               <br>
-              <input  type="textarea" maxlength="50" class="text-warning" id="intputPhoneNumber"  rows="2" name="messageToKitchen"  wrap="hard" placeholder="Message To Kitchen">
+              <input  type="textarea" maxlength="50" class="text-warning" id="messageToKitchen"  rows="2" name="messageToKitchen"  wrap="hard" placeholder="Message To Kitchen">
             </p>
         </div>
         <br>
