Conf footer align

--- a/client/views/template/footerConfirmation.html
+++ b/client/views/template/footerConfirmation.html
@@ -2,12 +2,8 @@
 
   <footer id="footer" class="footer">
       <div class="row"   id="address" style="padding:50px;"> 
-        <div class="pull-left col-xs-6" align="left"> 
-          Fax: <a href="tel:{{faxNumber.Value}}" class="phone">{{faxNumber.Value}}</a> 
-          
 
-        </div>
-        <div class="pull-right col-xs-6" align="right">
+        <div class="col-xs-12" align="center">
             <div class="copyright col-xs-6 text-center">Powered by Websheets&#8482; </div>
         </div>
       </div>
