Added literal phone

--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -160,7 +160,7 @@
                                     {{address.Value}}<br />
                                       <br />
                               </span>
-                              <a href="tel:{{phoneNumber.Value}}" class="phone">{{phoneNumber.Value}}</a></td>
+                              Phone:&nbsp;<a href="tel:{{phoneNumber.Value}}" class="phone">{{phoneNumber.Value}}</a></td>
                             </tr>
                             
                           </table>
