Added message to kitchen in conf page

--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -239,8 +239,21 @@
 
                   <tr>
                      {{# if haveTax}}
+
+                             {{#if haveMessageToKitchen UniqueId}} 
+
+                                <td class="item-col item" style="background-color: #ffffff; border-top: 1px solid #cccccc;">
+                                <div>
+                                    <span style="color: #4d4d4d; font-weight:bold;">Message to Kitchen:</span> 
+                                        <br /><br/> {{messageToKitchen UniqueId}}
+                                    </div>
+                                </td>
+                              {{else}}  
                                 <td class="item-col item">
                                 </td>
+
+                                {{/if}}
+
                                 <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;">
                                   <span class="total-space" >Subtotal</span> <br />
                                   <span class="total-space">Tax</span> <br />
@@ -255,9 +268,23 @@
 
                             </td>
 
-                       {{else}}     
+                       {{else}}   
+
+                             {{#if haveMessageToKitchen UniqueId}} 
+
+                              <td class="item-col item" style="background-color: #ffffff; border-top: 1px solid #cccccc;">
+                                <div>
+                                    <span style="color: #4d4d4d; font-weight:bold;">Message to Kitchen:</span> 
+                                        <br /><br/> {{messageToKitchen UniqueId}}
+                                    </div>
+                                </td>
+                              {{else}}  
+
                                 <td class="item-col item">
                                 </td>
+
+                                {{/if}}
+
                                 <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;">
                                   <!-- <span class="total-space">Delivery Fee</span> <br /> -->
                                 <span class="total-space" style="font-weight: bold; color: #4d4d4d">Total</span></td>
