Phone nummber required

--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -47,7 +47,7 @@
               <input type="email" class="text-warning" id="inputEmail" name="email" placeholder="Email" required>&nbsp;<sub>*</sub>
               <br>
               <br>
-              <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone Number">
+              <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone Number" required>&nbsp;<sub>*</sub>
               <br>
               <br>
               <input  type="textarea" maxlength="50" class="text-warning" id="messageToKitchen"  rows="2" name="messageToKitchen"  wrap="hard" placeholder="Message To Kitchen">
