--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -6,7 +6,7 @@
     <div class="minicart-body cart-toggle">
 <form id="contactInfoForm">
       <p>&nbsp; </p>
-      <h2 class="xsm text-uppercase text-center"  style="font-family: 'Rock Salt';">TOGO Order</h2>
+      <h2 class="xsm text-uppercase text-center"  style="font-family: 'Rock Salt'; padding-top    : 30px">TOGO Order</h2>
       <ul class="minicart-list">
 
         {{#each shopCart}}
@@ -54,7 +54,7 @@
             </p>
         </div>
         <br>
-        <button type="submit" class="btn btn btn-success checkout-btn placeOrder">Place Order ( To Go Only )</button>
+        <button type="submit" class="btn btn btn-success checkout-btn placeOrder">Place Order</button>
 
 
       {{/if}}
