--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -89,7 +89,7 @@
  
                                        
                                       {{else}}
-                                          <button type="button" class="fa fa-check btn btn-inverse" data-toggle="tooltip" data-placement="bottom" title='Not accepting online Orders'>
+                                          <button type="button" class="fa fa-check btn btn-inverse" data-toggle="tooltip" data-placement="bottom" title="Store Closed">
                                           <span class="price xsm"> {{currency Charge}} </span> 
                                            </button>
 
@@ -107,7 +107,7 @@
 
                                       {{else}}
 
-                                      <button type="button" class="fa fa-shopping-cart  btn btn-btn-inverse" data-toggle="tooltip" data-placement="bottom" title="Not accepting online Orders">
+                                      <button type="button" class="fa fa-shopping-cart  btn btn-btn-inverse" data-toggle="tooltip" data-placement="bottom" title="Store closed">
 
                                         <span class="price xsm"> {{currency Charge}} </span>  
                                       </button>
