--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -16,7 +16,7 @@
 
           <div class="col-xs-12">
 
-            <input type="number" maxlength="2" class="text-warning cartProduct" size="2" min="0"  id="product_in_cart" name="product_{{product}}" value="{{qty}}">
+            <input type="number" maxlength="2" class="text-warning cartProduct" size="2" min="0"  step="1" id="product_in_cart" name="product_{{product}}" value="{{qty}}">
 
            <span class="amount pull-right" >{{currency price}} </span>
         </div>
@@ -38,21 +38,24 @@
 
       
 
+   
         <div class="minicart-total"> Your Contact Information:<br>
           <br>
           <p>
-              <input class="text-warning" id="contactName" name="contactName" placeholder="Name" required>&nbsp;<sub>*</sub>
+              <input class="text-warning" id="contactName" name="contactName" placeholder="Name"   required >&nbsp;<sub>*</sub>
               <br>
               <br>
-              <input type="email" class="text-warning" id="inputEmail" name="email" placeholder="Email" required>&nbsp;<sub>*</sub>
+              <input type="email" class="text-warning" id="inputEmail" name="email" placeholder="Email" required >&nbsp;<sub>*</sub>
               <br>
               <br>
-              <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone Number" required>&nbsp;<sub>*</sub>
+              <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone - Numbers only" required >&nbsp;<sub>*</sub>
               <br>
               <br>
               <input  type="textarea" maxlength="50" class="text-warning" id="messageToKitchen"  rows="2" name="messageToKitchen"  wrap="hard" placeholder="Message To Kitchen">
             </p>
         </div>
+        <span id='contactInfoError' style="color:red" align='center'></span>
+        <br>
         <br>
         <button type="submit" class="btn btn btn-success checkout-btn placeOrder">Place Order</button>
 
