--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -17,12 +17,12 @@
                 <table cellpadding="0" cellspacing="0" width="100%" class="w320">
                   <tr>
                     <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;   padding: 25px;">
-                     <a href="/"> <img height="30" src="https://dosahouseau.herokuapp.com/img/dosa-logo2.png" alt="Dosa Express Logo" /></a>
+                     <a href="/"> <img height="30" src="/img/dosa-logo2.png" alt="Dosa Express Logo" /></a>
                       
                     </td>
                     <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d; padding: 25px;">
 
-                   <a href="http://twitter.com/dosaexpress"><img height="25" src="https://g.twimg.com/Twitter_logo_blue.png" alt="twitter" /></a>
+                   <a id="conf-header-twitter" target="_blank" href="https://twitter.com/dosahouse"><img height="25" src="https://g.twimg.com/Twitter_logo_blue.png" alt="twitter" /></a>
 <!-- Social Buttons             
 <a href=""><img width="45" height="45" src="http://placehold.it/45x45" alt="facebook" /></a>
                       <a href=""><img width="45" height="45" src="http://placehold.it/45x45" alt="rss" /></a>
