--- a/client/views/template/footer.html
+++ b/client/views/template/footer.html
@@ -13,7 +13,7 @@
         </div>
         <div class="pull-right col-xs-6" align="right">
           <div class="head-social"> <a href="#"><i class="fa fa-twitter fa-2x"></i></a> <br>
-            <a href="#">@dosaexpress</a> </div>
+            <a id="footer-twitter" target="_blank" href="https://twitter.com/dosahouse" >@dosaexpress</a> </div>
         </div>
       </div>
 
