--- a/client/stylesheets/websheets/styles.css
+++ b/client/stylesheets/websheets/styles.css
@@ -80,3 +80,24 @@ sup {
    display:none;
  
 }
+
+   footer{
+      background: #333;
+      
+      font-size:14px;
+      color: #eee;
+   
+      padding: 20px 20px 40px 20px;
+
+
+
+   }
+
+   .col-xs-12#footerCol{
+      padding-right: 0;
+      padding-left: 0;
+      margin-top: 60px;
+
+   }
+
+
