--- a/client/stylesheets/websheets/plaindosa-style.css
+++ b/client/stylesheets/websheets/plaindosa-style.css
@@ -184,7 +184,7 @@ header {
 @media only screen and (min-width: 1200px) {
 #main-nav {
 	/* reset main nav style */
-	position: absolute;
+	position: fixed;
 	height: auto;
 	width: auto;
 	left: auto;
