--- a/client/stylesheets/websheets/sidecart-style.css
+++ b/client/stylesheets/websheets/sidecart-style.css
@@ -185,7 +185,7 @@ header {
 @media only screen and (min-width: 1200px) {
   #main-nav {
     /* reset main nav style */
-    position: absolute;
+    position: fixed;
     height: auto;
     width: auto;
     left: auto;
